# fxxkDJTU

./: .gitignore  .gitmodules  Changelog.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci-build.yml  release.yml
docs/: CICD.md
public/template-assets/1pdf1img/: template.json
public/template-assets/1pdf2img/: template.json
public/template-assets/3pdf1img/: template.json
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: .gitignore
src-tauri/src/: batch_invoice.rs  batch_ocr.rs  debug_utils.rs  extract_invoice.rs  extract_ocr.rs  lib.rs  main.rs  ocr.rs
src/components/: BatchOcr.vue  ConfirmDialog.vue  EditableCell.vue  MergeConflictDialog.vue  ResultReview.vue  SourceIcon.vue  UpdateDialog.vue
src/components/pdfme/: PdfmeNavBar.vue
src/lib/pdfme/: helper.ts  pdfGenerator.test.ts  pdfGenerator.ts  plugins.ts
src/router/: index.ts
src/stores/: matchStore.ts  ocrStore.ts  pdfStore.ts
src/types/: invoice.ts  match.ts  ocr.ts
src/utils/: fileCollector.ts  fileScanner.ts  modelValidator.ts
src/views/: Settings.vue
src/views/pdfme/: DesignerView.vue  FormAndViewerView.vue
